chore: update models as well as other apps config

--- a/src/app/components/barcode-input/barcode-input.component.html
+++ b/src/app/components/barcode-input/barcode-input.component.html
@@ -22,9 +22,9 @@
 *
 *
 -->
-<ion-col col-auto no-padding no-margin>
-  <div float-right>
-    <div class="item-card" color="font-color" ion-button clear text-justify (click)="intiateBarcodeOrQRcode()">
+<ion-col col-auto class="ion-no-padding ion-no-margin">
+  <div class="ion-float-right">
+    <div class="item-card text-justify" color="font-color" ion-button clear (click)="intiateBarcodeOrQRcode()">
       <img [src]="icon" class="icon" />
       <br>
     </div>
