--- a/src/app/components/coordinate-input/coordinate-input.component.html
+++ b/src/app/components/coordinate-input/coordinate-input.component.html
@@ -25,12 +25,12 @@
 
 <ion-row>
     <ion-col>
-        <div class="full-width" padding text-justify (click)="openCoordinateSelctionModal()">
+        <div class="full-widthion-padding text-justify" (click)="openCoordinateSelctionModal()">
             {{ position.lat }}
         </div>
     </ion-col>
     <ion-col>
-        <div class="full-width" padding text-justify (click)="openCoordinateSelctionModal()">
+        <div class="full-widthion-padding text-justify" (click)="openCoordinateSelctionModal()">
             {{ position.lng }}
         </div>
     </ion-col>
