--- a/src/app/components/organisation-unit-input/organisation-unit-input.component.html
+++ b/src/app/components/organisation-unit-input/organisation-unit-input.component.html
@@ -24,7 +24,7 @@
 -->
 <ion-row>
     <ion-col>
-        <div class="full-width" padding text-justify (click)="openOrganisationUnitSetSelectionModal()">
+        <div class="full-widthion-padding text-justify"  (click)="openOrganisationUnitSetSelectionModal()">
             <span [translate]="
           organisationUnitLabel === ''
             ? 'Touch to select'
