--- a/src/app/login/components/login-spinner/login-spinner.component.html
+++ b/src/app/login/components/login-spinner/login-spinner.component.html
@@ -23,7 +23,7 @@
 *
 -->
 <div class="login-spinner-container">
-    <div class="cubespinner" padding-bottom padding-top margin-top margin-bottom>
+    <div class="cubespinner ion-padding-bottom ion-padding-top ion-margin-top ion-margin-bottom" >
         <div class="face1 div-with-text ">
             <img [src]="icon.appLogo">
         </div>
