--- a/src/app/modals/organisation-unit-search/organisation-unit-search.page.html
+++ b/src/app/modals/organisation-unit-search/organisation-unit-search.page.html
@@ -48,8 +48,8 @@
         </ion-label>
     </ion-item>
 </ion-content>
-<ion-footer no-margin>
-    <ion-toolbar no-margin>
+<ion-footer class="ion-no-margin">
+    <ion-toolbar class="ion-no-margin">
         <ion-buttons slot="start">
             <ion-button (click)="previousPage()" [disabled]="currentIndex === 0">
                 <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
