--- a/src/app/tabs/apps/settings/components/app-settings/app-settings.component.html
+++ b/src/app/tabs/apps/settings/components/app-settings/app-settings.component.html
@@ -22,7 +22,7 @@
 *
 *
 -->
-<ion-item lines="none" no-padding (click)="openTranslationCodeSelection()">
+<ion-item lines="none" class="ion-no-padding" (click)="openTranslationCodeSelection()">
     <ion-label slot="start">
         <span [translate]="'Current language'"></span>
     </ion-label>
