--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -22,7 +22,7 @@
 *
 *
 -->
-<ion-content padding>
+<ion-content class="ion-padding">
   <ion-tabs>
     <ion-tab-bar slot="top" [color]="(colorSettings$ |async).colorAttributes.main">
       <ion-tab-button tab="apps">
