--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,16 @@ ion-modal.inset-modal {
     padding: 20vh 7vw;
 }
 
+.lock-form {
+    color: #856404;
+    background-color: #fff3cd;
+    border-color: #ffeeba;
+}
+
+.bold-text {
+    font-weight: bold;
+}
+
 .side-menu-icon {
     width: 1.5rem;
     height: 1.5rem;
