--- a/src/app/modals/option-set-selection/option-set-selection.page.html
+++ b/src/app/modals/option-set-selection/option-set-selection.page.html
@@ -47,8 +47,8 @@
         </div>
     </div>
 </ion-content>
-<ion-footer no-margin>
-    <ion-toolbar no-margin>
+<ion-footer class="ion-no-margin">
+    <ion-toolbar class="ion-no-margin">
         <ion-buttons slot="start">
             <ion-button (click)="previousPage()" [disabled]="currentIndex === 0">
                 <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
