feat(data entry): fetching metadata for aggregate data entry form

--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -35,7 +35,7 @@
         </ion-label>
       </div>
       <div class="progress-percentage" *ngIf="showPercentage">
-        <div text-end>
+        <div class="text-end">
           {{ progressPercentage }} %
           <ion-icon *ngIf="showCancelButton" name="close" color="danger"></ion-icon>
         </div>
