feat(option set modal): support of hide or show delete button on option list modal

--- a/src/app/modals/option-set-selection/option-set-selection.page.html
+++ b/src/app/modals/option-set-selection/option-set-selection.page.html
@@ -63,7 +63,7 @@
             </ion-button>
         </ion-buttons>
         <ion-buttons slot="end">
-            <ion-button (click)="clearValue()" [disabled]="isDisabled">
+            <ion-button *ngIf="!isDeleteButtonHidden" (click)="clearValue()" [disabled]="isDisabled">
                 <ion-icon slot="icon-only" name="Trash" color="danger"></ion-icon>
             </ion-button>
         </ion-buttons>
